--- a/3.2_homework.md
+++ b/3.2_homework.md
@@ -1,5 +1,5 @@
 #### 1. Какого типа команда cd? Попробуйте объяснить, почему она именно такого типа; опишите ход своих мыслей, если считаете что она могла бы быть другого типа.
-команда cd типа stdin, так как она принимает ввод пользователя и совершает определенные действия, в моем понимании команды stdout - это те команды, которые на ввод пользователя отдают какуюлибо информацию, stderr - диагностические команды для поиска ошибка и/или чтения логов
+cd - это встроенная в оболочку программа, она быстрая, простая и врятли потребует каких-то изменений (для которых необходимо будет менять код оболочки) из-за того, что она встроенная, она работает намного быстрее лругих
 #### 2. Какая альтернатива без pipe команде grep <some_string> <some_file> | wc -l? man grep поможет в ответе на этот вопрос. Ознакомьтесь с документом о других подобных некорректных вариантах использования pipe.
 ```grep -c '####' os_homework.md ```
 #### 3. Какой процесс с PID 1 является родителем для всех процессов в вашей виртуальной машине Ubuntu 20.04?
@@ -12,8 +12,7 @@ vagrant@vagrant:~$ touch test.test
 vagrant@vagrant:~$ echo testinch > test.test
 vagrant@vagrant:~$ cat test.test
 testinch
-vagrant@vagrant:~$ touch result.test
-vagrant@vagrant:~$ cat test.test 1> result.test
+vagrant@vagrant:~$ cat < test.test 1> result.test
 vagrant@vagrant:~$ cat result.test
 testinch
 ```
@@ -22,7 +21,7 @@ testinch
 #### 7. Выполните команду bash 5>&1. К чему она приведет? Что будет, если вы выполните echo netology > /proc/$$/fd/5? Почему так происходит?
 создаст bash дескриптор 5 и перенаправит его на дескриптор 1, поэтому когда я выполняю вторую команду, отправляя ```echo netology``` команду в созданный дескриптор, он перенаправляется в первый и появляется на моем экране  
 #### 8. Получится ли в качестве входного потока для pipe использовать только stderr команды, не потеряв при этом отображение stdout на pty? Напоминаем: по умолчанию через pipe передается только stdout команды слева от | на stdin команды справа. Это можно сделать, поменяв стандартные потоки местами через промежуточный новый дескриптор, который вы научились создавать в предыдущем вопросе.
-с помощью ```|&```
+```(ls && cd -qaz)3>&1 2>&1 1>&3|less```
 #### 9. Что выведет команда cat /proc/$$/environ? Как еще можно получить аналогичный по содержанию вывод?
 выводит переменные окружения, можно получить тоже самое с помощью команды ```env```
 #### 10. Используя man, опишите что доступно по адресам /proc/<PID>/cmdline, /proc/<PID>/exe.
