--- a/3.3_homework.md
+++ b/3.3_homework.md
@@ -18,7 +18,8 @@ cd /proc/PID/fd
 echo 1>2
 ```
 #### 4. Занимают ли зомби-процессы какие-то ресурсы в ОС (CPU, RAM, IO)?
-занимают память, но в очень очень малых количествах
+занимают память, но в очень очень малых количествах.
+в моем случае 1.4 килобайта (сгенерировал зомби процесс и посчитал его размер)
 #### 5. В iovisor BCC есть утилита opensnoop:
 ```
 root@vagrant:~# dpkg -L bpfcc-tools | grep sbin/opensnoop
@@ -31,8 +32,7 @@ root@vagrant:~# dpkg -L bpfcc-tools | grep sbin/opensnoop
 /lib/x86_64-linux-gnu/libz.so.1
 #### 6. Какой системный вызов использует uname -a? Приведите цитату из man по этому системному вызову, где описывается альтернативное местоположение в /proc, где можно узнать версию ядра и релиз ОС.
 uname
-openat
-/sys/utsname.h
+>Part of the utsname information is also accessible via /proc/sys/kernel/{ostype, hostname, osrelease, version, domainname}.
 #### 7. Чем отличается последовательность команд через ; и через && в bash? Например:
 ```
 root@netology1:~# test -d /tmp/some_dir; echo Hi
