--- a/3.3_homework.md
+++ b/3.3_homework.md
@@ -20,6 +20,29 @@ echo 1>2
 #### 4. Занимают ли зомби-процессы какие-то ресурсы в ОС (CPU, RAM, IO)?
 занимают память, но в очень очень малых количествах.
 в моем случае 1.4 килобайта (сгенерировал зомби процесс и посчитал его размер)
+```
+Создал файл с наполнением 
+#include <stdlib.h>
+#include <sys/types.h>
+#include <unistd.h>int main ()
+{
+pid_t child_pid;child_pid = fork ();
+if (child_pid > 0) {
+sleep (600);
+}
+else {
+exit (0);
+}
+return 0;
+}
+```
+
+```
+gcc zombie.c -o zombie
+ps aux|grep Z
+du -s -b /proc/номер_зомби_процесса
+```
+
 #### 5. В iovisor BCC есть утилита opensnoop:
 ```
 root@vagrant:~# dpkg -L bpfcc-tools | grep sbin/opensnoop
